<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hi, Gasper!"
        style="@style/h1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/mainActivity_h2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblGreetings" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/group_dateFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/lblDescription"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_dateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/checkin_date"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/group_dateFrom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp" />

    <TextView
        android:id="@+id/lbl_hottest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hottest_deals"
        style="@style/h2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deals_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lbl_hottest"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:src="@drawable/logo_bookit"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>