<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ReservationActivity">

        <ImageView
            android:id="@+id/img_hotel"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/lbl_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h1"
            app:layout_constraintTop_toBottomOf="@id/img_hotel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/reserve_room"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/lbl_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/lbl_reservation"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/reservation_details"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/lbl_hotel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_details"
            android:textSize="17sp"
            android:layout_marginTop="7dp"
            android:text="Hotel name"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/lbl_hotel_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_hotel_name"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:text="Address"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/lbl_hotel_room_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_hotel_address"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:text="Room type"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/lbl_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_hotel_room_type"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:text="24 Sep - 26 Sep"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/lbl_user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/lbl_date"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/reservation_holder"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/lbl_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_user_details"
            android:textSize="17sp"
            android:layout_marginTop="7dp"
            android:text="First Last"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/lbl_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_user_name"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:text="Address"
            android:layout_marginLeft="15dp" />

        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/lbl_user_address"
            android:layout_margin="10dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/reserve" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>